[gd_scene load_steps=2 format=3 uid="uid://bkm2tg4oxgsjh"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_4h5kj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_4h5kj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.3, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -100.0
text = "魔物娘"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 100.0

[node name="StartGameButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "開始遊戲"

[node name="BattleTestButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "測試戰鬥"

[node name="LevelEditorButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "編輯關卡"

[node name="ExitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "離開遊戲"